Update the title

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://elliottt.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Stuff and Things
+subtitle: Probably just programming stuff
+author: Trevor Elliott
 simple_search: http://google.com/search
 description:
 
