Fix the github pages url

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://elliottt.github.com
+url: http://elliottt.github.io
 title: Stuff and Things
 subtitle: Probably just programming stuff
 author: Trevor Elliott
