--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/after-dark"]
 	path = themes/after-dark
-	url = https://github.com/Keats/after-dark
+	url = https://github.com/elliottt/after-dark
