--- a/config.toml
+++ b/config.toml
@@ -13,17 +13,18 @@ build_search_index = false
 
 theme = "after-dark"
 
-title = "stuff and things"
+title = "trevor elliott"
 
 taxonomies = [
   {name = "tags", rss = false},
 ]
 
 [extra]
-after_dark_title = "stuff and things"
+after_dark_title = "blog"
 
 after_dark_menu = [
     {url = "$BASE_URL", name = "home"},
     {url = "$BASE_URL/tags", name = "tags"},
     {url = "$BASE_URL/about", name = "about"},
+    {url = "$BASE_URL/cv", name = "cv"},
 ]
