--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@ highlight_code = true
 build_search_index = false
 
 theme = "after-dark"
+# theme = "dinkleberg"
 
 title = "trevor elliott"
 
@@ -20,6 +21,8 @@ taxonomies = [
 ]
 
 [extra]
+
+# After Dark Config
 after_dark_title = "blog"
 
 after_dark_menu = [
@@ -28,3 +31,7 @@ after_dark_menu = [
     {url = "$BASE_URL/about", name = "about"},
     {url = "$BASE_URL/cv", name = "cv"},
 ]
+
+
+# Dinkleberg Config
+label_tags = "Tags"
