--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/terminal"]
-	path = themes/terminal
-	url = https://github.com/panr/hugo-theme-terminal.git
+[submodule "themes/dusk"]
+	path = themes/dusk
+	url = https://github.com/gyorb/hugo-dusk
