Use nix flakes to manage the build

--- a/resume/Makefile
+++ b/resume/Makefile
@@ -4,16 +4,14 @@ all: resume.pdf
 build:
 	@mkdir build
 
-resume.pdf: resume.tex publications.bib | build
-	@echo "\033[0;94m[PDFLATEX]\033[0m $@"
-	@pdflatex -interaction=nonstopmode -output-directory=build $< >build/log.txt 2>&1 || ( cat build/log.txt >&2; exit 1 )
-	@echo "\033[0;94m[BIBER]\033[0m $@"
-	@biber build/resume.bcf
-	@echo "\033[0;94m[PDFLATEX]\033[0m $@"
-	@pdflatex -interaction=nonstopmode -output-directory=build $< >build/log.txt 2>&1 || ( cat build/log.txt >&2; exit 1 )
-	@echo "\033[0;94m[PDFLATEX]\033[0m $@"
-	@pdflatex -interaction=nonstopmode -output-directory=build $< >build/log.txt 2>&1 || ( cat build/log.txt >&2; exit 1 )
-	@mv build/`basename $@` $@
+%.pdf: build/%.pdf
+	cp $< $@
+
+build/resume.pdf: resume.tex publications.bib | build
+	latexmk -interaction=nonstop \
+		-f -silent -pdf -lualatex \
+		-output-directory=build \
+		$<
 
 clean:
 	rm -f *.pdf
